// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92 5.19l-.22-.23c-.284-.285-.75-.285-1.032 0l-4.13 4.127L4.79 7.474c-.285-.286-.747-.286-1.032 0l-.287.342c-.285.286-.285.746 0 1.033l2.486 2.353c.285.285.748.285 1.033 0l4.93-4.98c.285-.285.285-.748 0-1.034z"
  />
</Icon>
`;

exports[`SuccessIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon lucid-SuccessIcon-is-clickable"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92 5.19l-.22-.23c-.284-.285-.75-.285-1.032 0l-4.13 4.127L4.79 7.474c-.285-.286-.747-.286-1.032 0l-.287.342c-.285.286-.285.746 0 1.033l2.486 2.353c.285.285.748.285 1.033 0l4.93-4.98c.285-.285.285-.748 0-1.034z"
  />
</Icon>
`;

exports[`SuccessIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessIcon-background lucid-SuccessIcon-background-is-disabled"
    cx="8"
    cy="8"
    r="8"
  />
  <path
    className="lucid-SuccessIcon-check"
    d="M11.92 5.19l-.22-.23c-.284-.285-.75-.285-1.032 0l-4.13 4.127L4.79 7.474c-.285-.286-.747-.286-1.032 0l-.287.342c-.285.286-.285.746 0 1.033l2.486 2.353c.285.285.748.285 1.033 0l4.93-4.98c.285-.285.285-.748 0-1.034z"
  />
</Icon>
`;
